--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,8 +1,8 @@
 name: flutter_oss_licenses
-description: A tool for generating OSS license list using pubspec.lock
+description: A tool for generating OSS license list using pubspec.lock.
 homepage: https://github.com/espresso3389/flutter_oss_licenses
-author: Takashi Kawasaki (@espresso3389)
-version: "0.1.0"
+author: Takashi Kawasaki <espresso3389@gmail.com>
+version: "0.2.0"
 
 environment:
   sdk: ">=2.2.2 <3.0.0"
