--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,10 +1,10 @@
 name: flutter_oss_licenses
 description: A tool for generating detail and better OSS license list using pubspec.lock.
 homepage: https://github.com/espresso3389/flutter_oss_licenses
-version: "0.6.6"
+version: "1.0.0"
 
 environment:
-  sdk: ">=2.0.0 <3.0.0"
+  sdk: '>=2.12.0 <3.0.0'
 
 executables:
   generate:
@@ -12,6 +12,6 @@ executables:
 dependencies:
   path: ^1.7.0
   meta: ^1.2.4
-  yaml: ^2.2.1
+  yaml: ^3.1.0
 
 dev_dependencies:
