--- a/packages/dart_oss_licenses/pubspec.yaml
+++ b/packages/dart_oss_licenses/pubspec.yaml
@@ -1,4 +1,4 @@
-name: dart_oss_licenses
+name: dart_pubspec_licenses
 description: A library to make it easy to extract OSS license information from Dart packages using pubspec.yaml
 version: 1.0.0
 homepage: https://github.com/espresso3389/flutter_oss_licenses
@@ -8,6 +8,7 @@ environment:
 
 dependencies: 
   yaml: ^3.1.0
+  path: ^1.8.0
 
 dev_dependencies: 
   lints: ^1.0.1
