--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,7 +1,6 @@
 name: flutter_oss_licenses
-description: A new Flutter project.
-version: 1.0.1
-publish_to: none
+description: A tool for generating detail and better OSS license list using pubspec.lock.
+version: 1.1.0
 homepage: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
@@ -14,8 +13,7 @@ dependencies:
   path: ^1.8.0
   meta: ^1.7.0
   yaml: ^3.1.0
-  dart_oss_licenses:
-    path: ../dart_oss_licenses
+  dart_pubspec_licenses: ^1.0.1
 
 dev_dependencies:
   flutter_lints: ^1.0.4
