--- a/packages/dart_pubspec_licenses/pubspec.yaml
+++ b/packages/dart_pubspec_licenses/pubspec.yaml
@@ -1,7 +1,8 @@
 name: dart_pubspec_licenses
 description: A library to make it easy to extract OSS license information from Dart packages using pubspec.yaml
 version: 1.0.1
-homepage: https://github.com/espresso3389/flutter_oss_licenses
+homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/dart_pubspec_licenses
+repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
