--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,7 +1,8 @@
 name: flutter_oss_licenses
-description: A tool for generating detail and better OSS license list using pubspec.lock.
+description: A tool to generate detail and better OSS license list using pubspec.yaml/lock files.
 version: 1.1.1
-homepage: https://github.com/espresso3389/flutter_oss_licenses
+homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/flutter_oss_licenses
+repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
