adding the ability to export just JSON
for other purposes than using the data within a dart project, the JSON
is often very helpful, so a new parameter allows to create a pure JSON
variant of it

* using 'args' module
* changed the parameter the command supports
* added the ability to export JSON

--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -15,6 +15,7 @@ dependencies:
   meta: ^1.7.0
   yaml: ^3.1.0
   dart_pubspec_licenses: ^1.0.1
+  args: ^2.3.0
 
 dev_dependencies:
   flutter_lints: ^1.0.4
