dart_pubspec_licenses: Add a working example
dart_pubspec_licenses' usage example in `README.md` had a couple of
problems:

* It had a typo (referring to a non-existent `project` variable).
* It printed the license information as a Dart `Map`, which would
  not be ideally formatted and which would include other package
  metadata.

Replace the example from `README.md` with a standalone command-line
app.

--- a/packages/dart_pubspec_licenses/pubspec.yaml
+++ b/packages/dart_pubspec_licenses/pubspec.yaml
@@ -1,15 +1,15 @@
 name: dart_pubspec_licenses
 description: A library to make it easy to extract OSS license information from Dart packages using pubspec.yaml
-version: 1.0.1
+version: 1.0.1+1
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/dart_pubspec_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
   sdk: ">=2.12.0 <3.0.0"
 
-dependencies: 
+dependencies:
   yaml: ^3.1.0
   path: ^1.8.0
 
-dev_dependencies: 
+dev_dependencies:
   lints: ^1.0.1
