dart_pubspec_licenses 2.0.0

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,19 +1,20 @@
 {
-    "cSpell.words": [
-        "Takashi",
-        "appdata",
-        "encodable",
-        "localappdata",
-        "pubspec",
-        "serializable",
-        "userprofile"
-    ],
-    "[dart]": {
-      "editor.formatOnSave": true,
-      "editor.formatOnType": true,
-      "editor.rulers": [
-        120
-      ]
-    },
-    "dart.lineLength": 120
+  "cSpell.words": [
+    "appdata",
+    "encodable",
+    "localappdata",
+    "pubspec",
+    "serializable",
+    "Takashi",
+    "userprofile",
+    "writeln"
+  ],
+  "[dart]": {
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "editor.rulers": [
+      120
+    ]
+  },
+  "dart.lineLength": 120
 }
