--- a/packages/dart_pubspec_licenses/pubspec.yaml
+++ b/packages/dart_pubspec_licenses/pubspec.yaml
@@ -1,6 +1,6 @@
 name: dart_pubspec_licenses
 description: A library to make it easy to extract OSS license information from Dart packages using pubspec.yaml
-version: 2.0.1
+version: 2.0.2
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/dart_pubspec_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
@@ -10,6 +10,9 @@ environment:
 dependencies:
   yaml: ^3.1.0
   path: ^1.8.0
+  json_annotation: ^4.5.0
 
 dev_dependencies:
   lints: ^1.0.1
+  json_serializable: ^6.2.0
+  build_runner: ^2.1.11
