--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_oss_licenses
 description: A tool to generate detail and better OSS license list using pubspec.yaml/lock files.
-version: 2.0.0+1
+version: 2.0.1
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/flutter_oss_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
@@ -14,7 +14,7 @@ dependencies:
   path: ^1.8.0
   meta: ^1.7.0
   yaml: ^3.1.0
-  dart_pubspec_licenses: ^2.0.1
+  dart_pubspec_licenses: ^2.0.2
   args: ^2.3.0
 
 dev_dependencies:
