--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,11 +1,11 @@
 name: flutter_oss_licenses
 description: A tool to generate detail and better OSS license list using pubspec.yaml/lock files.
-version: 2.0.3
+version: 3.0.0
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/flutter_oss_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
-  sdk: ">=2.12.0 <4.0.0"
+  sdk: ">=2.17.0 <4.0.0"
 
 executables:
   generate:
@@ -14,7 +14,9 @@ dependencies:
   path: ^1.9.0
   meta: ^1.11.0
   yaml: ^3.1.2
-  dart_pubspec_licenses: ^2.0.2
+  dart_pubspec_licenses: ^3.0.1
+  # dart_pubspec_licenses:
+  #   path: ../dart_pubspec_licenses
   args: ^2.4.2
 
 dev_dependencies:
