--- a/packages/dart_pubspec_licenses/pubspec.yaml
+++ b/packages/dart_pubspec_licenses/pubspec.yaml
@@ -1,16 +1,21 @@
 name: dart_pubspec_licenses
 description: A library to make it easy to extract OSS license information from Dart packages using pubspec.yaml
-version: 3.0.4
+version: 3.0.5
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/dart_pubspec_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
-  sdk: ">=3.3.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
+resolution: workspace
+
+executables:
+  generate:
 
 dependencies:
   yaml: ^3.1.2
   path: ^1.9.0
   json_annotation: ^4.9.0
+  args: ^2.6.0
 
 dev_dependencies:
   lints: ^5.0.0
