--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,11 +1,12 @@
 name: flutter_oss_licenses
 description: A tool to generate detail and better OSS license list using pubspec.yaml/lock files.
-version: 3.0.4
+version: 3.0.5
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/flutter_oss_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
 environment:
-  sdk: ">=2.17.0 <4.0.0"
+  sdk: ">=3.9.0 <4.0.0"
+resolution: workspace
 
 executables:
   generate:
@@ -14,9 +15,7 @@ dependencies:
   path: ^1.9.0
   meta: ^1.15.0
   yaml: ^3.1.2
-  dart_pubspec_licenses: ^3.0.4
-  # dart_pubspec_licenses:
-  #   path: ../dart_pubspec_licenses
+  dart_pubspec_licenses: ^3.0.5
   args: ^2.6.0
 
 dev_dependencies:
