--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -14,5 +14,10 @@
     "source.organizeImports": "explicit"
   },
   "dart.lineLength": 120,
-  "dart.projectSearchDepth": 5
+  "dart.projectSearchDepth": 5,
+  "[dart]": {
+    "editor.formatOnSave": true,
+    "editor.formatOnType": true,
+    "editor.rulers": [120]
+  }
 }
