--- a/packages/flutter_oss_licenses/.gitignore
+++ b/packages/flutter_oss_licenses/.gitignore
@@ -2,10 +2,4 @@
 .idea/
 .vscode/
 /.packages
-
-# Don't add our own
-/lib/
-/lib/oss_licenses.dart
-.dart_tool/package_config.json
-
-.dart_tool/
+\.dart_tool/
