--- a/packages/flutter_oss_licenses/pubspec.yaml
+++ b/packages/flutter_oss_licenses/pubspec.yaml
@@ -1,6 +1,6 @@
 name: flutter_oss_licenses
 description: A tool to generate detail and better OSS license list using pubspec.yaml/lock files.
-version: 3.0.10
+version: 3.0.11
 homepage: https://github.com/espresso3389/flutter_oss_licenses/tree/master/packages/flutter_oss_licenses
 repository: https://github.com/espresso3389/flutter_oss_licenses
 
@@ -12,11 +12,9 @@ executables:
   generate:
 
 dependencies:
-  path: ^1.9.0
-  meta: ^1.15.0
-  yaml: ^3.1.2
-  dart_pubspec_licenses: ^3.0.12
-  args: ^2.6.0
+  # This package is now just a wrapper of dart_pubspec_licenses package and re-exports its functionality only.
+  # So, it can depend on any version of dart_pubspec_licenses package without any issues.
+  dart_pubspec_licenses:
 
 dev_dependencies:
   flutter_lints: ^5.0.0
